# reading-app-062225

./: .gitignore  DCO.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  ruff.toml
src/backend/: .env.example  Dockerfile  pyproject.toml
src/backend/core/: config.py  main.py
src/ui/: .biomeignore  .prettierignore  eslint.config.js  package.json  tsconfig.app.json
src/ui/src/: App.tsx
